Modified the http://nmr-relax.com download page to point to relax version 1.3.12.

--- a/download.html
+++ b/download.html
@@ -88,7 +88,7 @@
   <div id="Current release" class="main_box">
     <h1>Current release</h1>
 
-      <p>The current stable release is relax version 1.3.11.</p>
+      <p>The current stable release is relax version 1.3.12.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with other Python versions on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -122,16 +122,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.11.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>7c5f9aaf87d7c77d036d7b7ccae8bfb2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>11028032</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>e733724e650145e82be68d282bfe50a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>10944056</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.11.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>546a98680da9b27d7a5b84aa331aec1a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>11059622</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d40922b42da0e21bb77fabc00fc1945e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>11039480</td>
     </tr>
   </tbody>
 </table>
@@ -163,10 +163,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.Win32.zip" title="relax">relax-1.3.11.Win32.zip</a></td>
-      <td><tt><small>99a05c7691e62d5debb6dff58045992d</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>13067450</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.Win32.zip" title="relax">relax-1.3.12.Win32.zip</a></td>
+      <td><tt><small>71dcf1e573bf46f7ff7f2a46074c5fe5</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>13019213</td>
     </tr>
   </tbody>
 </table>
@@ -225,16 +225,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.src.tar.bz2" title="relax">relax-1.3.11.src.tar.bz2</a></td>
-      <td><tt><small>af3c35fc89c138cea3349ee1b3305b1a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>11054338</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.tar.bz2" title="relax">relax-1.3.12.src.tar.bz2</a></td>
+      <td><tt><small>604ab14c97ca1eb004aa15ee6a7b3177</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>11037768</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.src.zip" title="relax">relax-1.3.11.src.zip</a></td>
-      <td><tt><small>66d56ef1ad8cb5a8dbc6472f66b669e2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.11.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>13028854</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip" title="relax">relax-1.3.12.src.zip</a></td>
+      <td><tt><small>6256dfecb1e9864bb3322b6c3f390de7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>13060758</td>
     </tr>
   </tbody>
 </table>
@@ -324,6 +324,37 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
+    <tr><td><em>Version 1.3.12 (2011-08-22)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>e733724e650145e82be68d282bfe50a7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>10944056</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d40922b42da0e21bb77fabc00fc1945e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>11039480</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.Win32.zip" title="relax">relax-1.3.12.Win32.zip</a></td>
+      <td><tt><small>71dcf1e573bf46f7ff7f2a46074c5fe5</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>13019213</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.tar.bz2" title="relax">relax-1.3.12.src.tar.bz2</a></td>
+      <td><tt><small>604ab14c97ca1eb004aa15ee6a7b3177</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>11037768</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip" title="relax">relax-1.3.12.src.zip</a></td>
+      <td><tt><small>6256dfecb1e9864bb3322b6c3f390de7</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>13060758</td>
+    </tr>
     <tr><td><em>Version 1.3.11 (2011-08-12)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.11.GNU-Linux.i686.tar.bz2</a></td>
