Modified the http://nmr-relax.com download page to point to relax version 1.3.13.
The Mac OS X stand-alone application is now included.

--- a/download.html
+++ b/download.html
@@ -88,7 +88,7 @@
   <div id="Current release" class="main_box">
     <h1>Current release</h1>
 
-      <p>The current stable release is relax version 1.3.12.</p>
+      <p>The current stable release is relax version 1.3.13.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with other Python versions on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -122,16 +122,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>e733724e650145e82be68d282bfe50a7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>10944056</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.13.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>5655a892e4181de175b09be67a8d8506</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>16057986</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>d40922b42da0e21bb77fabc00fc1945e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>11039480</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.13.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>541f901a483b32862bbe98d3c112317b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>15997206</td>
     </tr>
   </tbody>
 </table>
@@ -163,10 +163,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.Win32.zip" title="relax">relax-1.3.12.Win32.zip</a></td>
-      <td><tt><small>71dcf1e573bf46f7ff7f2a46074c5fe5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>13019213</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Win32.zip" title="relax">relax-1.3.13.Win32.zip</a></td>
+      <td><tt><small>88d953915673f3bcaaade41565a9357d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>18277838</td>
     </tr>
   </tbody>
 </table>
@@ -190,11 +190,37 @@
 <!-- Mac OS X -->
     <div id="Mac_OS_X" class="main_h2">
       <h2>Mac OS X</h2>
-        <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.5 with the command:</p>
+        <p>There are 3 ways of installing relax on a Mac.  These are using the pre-compiled relax application, Fink or the <a href="download.html#Source_code_release">source releases</a>.</p>
+
+        <h3>Stand-alone application</h3>
+
+        <p>The stand-alone relax application requires none of the dependencies listed below to be installed.  It is a universal binary compiled for i386, x86-64 and ppc64 (fat3) with the Mac OS X 10.5 framework.  It should therefore run on most Mac OS X systems at or above version 10.5.</p>
+
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Distribution package</strong></td>
+      <td><strong>MD5 checksum</strong></td>
+      <td><strong>GPG signature</strong></td>
+      <td><strong>File size (bytes)</strong></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Darwin.dmg" title="relax">relax-1.3.13.Darwin.dmg</a></td>
+      <td><tt><small>04ed984592ec1d51d40da15f21028fab</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td>128096286</td>
+    </tr>
+  </tbody>
+</table>
+
+        <h3>Fink</h3>
+
+          <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.5 with the command:</p>
 
         <p><em>> fink install relax-py25</em></p>
 
-        <p>The relax releases packaged within Fink can been browsed <a href="http://pdb.finkproject.org/pdb/browse.php?name=relax">here</a>.  If the desired version is not available, please download the relevent source package below.</p>
+        <p>The relax releases packaged within Fink can been browsed <a href="http://pdb.finkproject.org/pdb/browse.php?name=relax">here</a>.  If the desired version is not available, please download the relevant source package below.</p>
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
@@ -225,16 +251,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.tar.bz2" title="relax">relax-1.3.12.src.tar.bz2</a></td>
-      <td><tt><small>604ab14c97ca1eb004aa15ee6a7b3177</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>11037768</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.tar.bz2" title="relax">relax-1.3.13.src.tar.bz2</a></td>
+      <td><tt><small>b6c41cef7055bc0f5bec0e0b66c51cb8</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>15985739</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip" title="relax">relax-1.3.12.src.zip</a></td>
-      <td><tt><small>6256dfecb1e9864bb3322b6c3f390de7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>13060758</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.zip" title="relax">relax-1.3.13.src.zip</a></td>
+      <td><tt><small>1af666b0ca9c795f88e0d1227b5c4c10</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>18324405</td>
     </tr>
   </tbody>
 </table>
@@ -322,6 +348,44 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.3.13 (2011-11-14)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.13.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>5655a892e4181de175b09be67a8d8506</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>16057986</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.13.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>541f901a483b32862bbe98d3c112317b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>15997206</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Win32.zip" title="relax">relax-1.3.13.Win32.zip</a></td>
+      <td><tt><small>88d953915673f3bcaaade41565a9357d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>18277838</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Darwin.dmg" title="relax">relax-1.3.13.Darwin.dmg</a></td>
+      <td><tt><small>04ed984592ec1d51d40da15f21028fab</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td>128096286</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.tar.bz2" title="relax">relax-1.3.13.src.tar.bz2</a></td>
+      <td><tt><small>b6c41cef7055bc0f5bec0e0b66c51cb8</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>15985739</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.zip" title="relax">relax-1.3.13.src.zip</a></td>
+      <td><tt><small>1af666b0ca9c795f88e0d1227b5c4c10</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.13.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>18324405</td>
     </tr>
 
     <tr><td><em>Version 1.3.12 (2011-08-22)</em></td></tr>
