--- a/docs.html
+++ b/docs.html
@@ -89,19 +89,7 @@
   <div class="main_h2">
     <h2>The manual</h2>
 
-    <p>Finally, the best source of information is the current version of the the relax manual which comes with relax.  These can be download from here</p>
-
-    <ul class="main_ul">
-      <li><a href="http://download.gna.org/relax/manual/1.3/relax.pdf">PDF manual for relax version 1.3.x.</a></li>
-      <li><a href="http://download.gna.org/relax/manual/1.2/relax.pdf">PDF manual for relax version 1.2.x.</a></li>
-    </ul>
-
-    <p>The manual has also been converted into a HTML version which can be browsed on-line.  This version is, however, inferior in quality in comparison to the original PDF.</p>
-
-    <ul class="main_ul">
-      <li><a href="manual/1.3/relax.html">HTML manual for relax version 1.3.x.</a></li>
-      <li><a href="manual/1.2/relax.html">HTML manual for relax version 1.2.x.</a></li>
-    </ul>
+    <p>Finally, the best source of information is the current version of the relax manual which is distributed with relax.  It is available as a high quality <a href="http://download.gna.org/relax/manual/1.3/relax.pdf">PDF manual</a>, and it has also been converted into a <a href="manual/1.3/relax.html">HTML version</a> which can be browsed on-line.  The HTML version is, however, inferior in quality in comparison to the original PDF.</p>
 
     <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
 
@@ -118,8 +106,7 @@
         <input type="hidden" name="domains" value="http://nmr-relax.com"/>
           <br />
           <input type="radio" name="sitesearch" value=""/> WWW
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.2" checked="checked"/> relax 1.2 HTML manual
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3"/> relax 1.3 HTML manual
+          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3" checked="checked"/> relax 1.3 HTML manual
       </td>
     </tr>
     </table>
