--- a/devel_platform.html
+++ b/devel_platform.html
@@ -43,8 +43,8 @@
     <li class="menu_def"><a href="events.html" title="The material related to events publicizing relax">Events</a></li>
     <li class="menu_def"><a href="refs.html" title="References for relax">References</a></li>
     <li class="menu_def"><a href="links.html" title="Where to find relax on the web">Links</a></li>
-    <li class="menu_def"><a href="api/" title="Documentation of the Application Programming Interface (API).">API documentation</a></li>
-    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform.">Development platform setup</a></li>
+    <li class="menu_def"><a href="api/" title="The relax internals">API documentation</a></li>
+    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
     <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
