Changes to the main relax webpage at http://nmr-relax.com.

--- a/index.html
+++ b/index.html
@@ -64,12 +64,25 @@
   <div class="main_box">
     <h1>relax</h1>
 
-      <p>The program relax is a software package designed for the study of molecular dynamics through the analysis of experimental NMR data.  Organic molecules, proteins, RNA, DNA, sugars, and other biomolecules are all supported.  relax is a community driven project created by NMR spectroscopists for NMR spectroscopists.  It supports a diverse range of analyses: exponential curve fitting for the calculation of the R<sub>1</sub> and R<sub>2</sub> relaxation rates; calculation of the steady-state NOE; consistency testing of multiple field relaxation data; reduced spectral density mapping; the Lipari and Szabo model-free analysis; study of domain motions via the N-state model and frame order dynamics theories using anisotropic NMR parameters such as RDCs and PCSs; and the investigation of stereochemistry.  The full list of features is described <a href="features.html">here</a>.</p>
+    <p>The program relax is a software package designed for the study of molecular dynamics through the analysis of experimental NMR data.  Organic molecules, proteins, RNA, DNA, sugars, and other biomolecules are all supported.  It was originally written for the model-free analysis of protein dynamics, though its scope has been significantly expanded.</p>
+
+    <p>relax is a community driven project created by NMR spectroscopists for NMR spectroscopists.  It supports a diverse range of analyses:</p>
+    <ul>
+        <li>Model-free analysis - the Lipari and Szabo model-free analysis of NMR relaxation data.</li>
+        <li>R<sub>1</sub> and R<sub>2</sub> - the exponential curve fitting for the calculation of the R<sub>x</sub> relaxation rates.</li>
+        <li>NOE - the calculation of the steady-state NOE.</li>
+        <li>Consistency testing of multiple field relaxation data.</li>
+        <li>RSDM - Reduced Spectral Density Mapping.</li>
+        <li>Frame order and N-state model - study of domain motions via the N-state model and frame order dynamics theories using anisotropic NMR parameters such as RDCs and PCSs.</li>
+        <li>Stereochemistry investigations.</li>
+    </ul>
+
+    <p>The full list of features is described <a href="features.html">here</a>.</p>
 
     <div class="main_h2">
        <h2>Flexibility</h2>
 
-          <p>The aim of relax is to provide a seamless and extremely flexible environment able to accept input in any format produced by other NMR software, able to faultlessly create input files, control, and read output from various programs including <a href="http://cpmcnet.columbia.edu/dept/gsas/biochem/labs/palmer">Modelfree</a> and <a href="http://www.nmr.ru/dasha.html">Dasha</a>, output results in many formats, and visualise the data by controlling programs such as <a href="http://plasma-gate.weizmann.ac.il/Grace">Grace</a>, <a href="http://www.opendx.org">OpenDX</a>, and <a href="http://hugin.ethz.ch/wuthrich/software/molmol/">MOLMOL</a>.</p>
+          <p>The aim of relax is to provide a seamless and extremely flexible environment able to accept input in any format produced by other NMR software, able to faultlessly create input files, control, and read output from various model-free programs including <a href="http://cpmcnet.columbia.edu/dept/gsas/biochem/labs/palmer">Modelfree</a> and <a href="http://www.nmr.ru/dasha.html">Dasha</a>, output results in many formats, and visualise the data by controlling programs such as <a href="http://plasma-gate.weizmann.ac.il/Grace">Grace</a>, <a href="http://www.opendx.org">OpenDX</a>, and <a href="http://hugin.ethz.ch/wuthrich/software/molmol/">MOLMOL</a>.</p>
 
           <p>All data analysis tools from optimisation to model selection to Monte Carlo simulations are inbuilt into relax.  Therefore the use of additional programs is optional.</p>
     </div>
