--- a/features.html
+++ b/features.html
@@ -14,7 +14,7 @@
 -->
 
 <head>
-  <title>Program features</title>
+  <title>Program features - Model-free, RMSD, R1, R2, NOE, Consistency testing, Frame order, N-state model</title>
   <meta name="AUTHOR" content="Edward d'Auvergne and S&eacute;bastien Morin"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="Description" content="Software for dynamics analysis, model-free analysi, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
