Changed all the http://nmr-relax.com links to http://www.nmr-relax.com.
This is to possibly help with search engine indexing of the website.

--- a/docs.html
+++ b/docs.html
@@ -23,7 +23,7 @@
 <body>
 
 <div class="header_image">
-  <a href="http://nmr-relax.com" name="relax" type="image/png"><img src="relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
+  <a href="http://www.nmr-relax.com" name="relax" type="image/png"><img src="relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
 </div>
 
 <div class="header">
@@ -35,7 +35,7 @@
     <li class="menu_header">The relax menu</li>
 
     <li class="menu_title">relax</li>
-    <li class="menu_def"><a href="http://nmr-relax.com" title="Go to the relax home page">Main page</a></li>
+    <li class="menu_def"><a href="http://www.nmr-relax.com" title="Go to the relax home page">Main page</a></li>
     <li class="menu_def"><a href="features.html" title="A listing of relax's features">Features</a></li>
     <li class="menu_def"><a href="docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></li>
     <li class="menu_def"><a href="download.html" title="Instructions for downloading relax">Download</a></li>
@@ -101,7 +101,7 @@
       <td style="font-size:80%">
         <input type="text" name="q" size="31" maxlength="255" value=""/>
         <input type="submit" name="btnG" value="Google Search"/>
-        <input type="hidden" name="domains" value="http://nmr-relax.com"/>
+        <input type="hidden" name="domains" value="http://www.nmr-relax.com"/>
           <br />
           <input type="radio" name="sitesearch" value=""/> WWW
           <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3" checked="checked"/> relax 1.3 HTML manual
