--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@
 <body>
 
 <div class="header_image">
-  <a href="http://nmr-relax.com" name="relax" type="image/png"><img src="relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
+  <a href="http://www.nmr-relax.com" name="relax" type="image/png"><img src="relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
 </div>
 
 <div class="header">
@@ -36,7 +36,7 @@
     <li class="menu_header">The relax menu</li>
 
     <li class="menu_title">relax</li>
-    <li class="menu_def"><a href="http://nmr-relax.com" title="Go to the relax home page">Main page</a></li>
+    <li class="menu_def"><a href="http://www.nmr-relax.com" title="Go to the relax home page">Main page</a></li>
     <li class="menu_def"><a href="features.html" title="A listing of relax's features">Features</a></li>
     <li class="menu_def"><a href="docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></li>
     <li class="menu_def"><a href="download.html" title="Instructions for downloading relax">Download</a></li>
@@ -82,8 +82,8 @@
         <tr>
           <td></td>
           <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://nmr-relax.com/conferences/edward_abstract_ANZMAG_2004.txt">Abstract</a></td>
-          <td><a href="http://nmr-relax.com/conferences/edward_poster_ANZMAG_2004.pdf">Poster</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ANZMAG_2004.txt">Abstract</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_poster_ANZMAG_2004.pdf">Poster</a></td>
         </tr>
 
         <tr>
@@ -96,8 +96,8 @@
         <tr>
           <td></td>
           <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
-          <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
         </tr>
 
         <tr>
@@ -110,9 +110,9 @@
         <tr>
           <td></td>
           <td><strong>Presenter:</strong> Edward d'Auvergne</td>
-          <td><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></td>
-          <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></td>
-          <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
         </tr>
 
         <tr>
@@ -125,7 +125,7 @@
         <tr>
           <td></td>
           <td><strong>Presenter:</strong> S&eacute;bastien Morin</td>
-          <td><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></td>
+          <td><a href="http://www.nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></td>
         </tr>
       </tbody>
     </table>
