--- a/faq.html
+++ b/faq.html
@@ -22,6 +22,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-30096326-1']);
+  _gaq.push(['_setDomainName', 'nmr-relax.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
