Removed all references to the relax 1.3 version as it is now the default and only version.
This is for http://www.nmr-relax.com/docs.html.

--- a/docs.html
+++ b/docs.html
@@ -101,7 +101,7 @@
   <div class="main_h2">
     <h2>The manual</h2>
 
-    <p>Finally, the best source of information is the current version of the relax manual which is distributed with relax.  It is available as a high quality <a href="http://download.gna.org/relax/manual/1.3/relax.pdf">PDF manual</a>, and it has also been converted into a <a href="manual/1.3/relax.html">HTML version</a> which can be browsed on-line.  The HTML version is, however, inferior in quality in comparison to the original PDF.</p>
+    <p>Finally, the best source of information is the current version of the relax manual which is distributed with relax.  It is available as a high quality <a href="http://download.gna.org/relax/manual/relax.pdf">PDF manual</a>, and it has also been converted into a <a href="manual/relax.html">HTML version</a> which can be browsed on-line.  The HTML version is, however, inferior in quality in comparison to the original PDF.</p>
 
     <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
 
@@ -118,7 +118,7 @@
         <input type="hidden" name="domains" value="http://www.nmr-relax.com"/>
           <br />
           <input type="radio" name="sitesearch" value=""/> WWW
-          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual/1.3" checked="checked"/> relax 1.3 HTML manual
+          <input type="radio" name="sitesearch" value="http://www.nmr-relax.com/manual" checked="checked"/> relax manual
       </td>
     </tr>
     </table>
