SSI includes are now being used for the footers of all pages at http://www.nmr-relax.com.

--- a/devel_platform.html
+++ b/devel_platform.html
@@ -59,13 +59,8 @@
  </div>
 </div>
 
-<div class="clear"></div>
-
-<div class="footer">
- <div class="footer_left">This text is available under the terms of the <a href="fdl.html">GNU Free Documentation License</a>.</div>
- <div class="footer_right">Hosted by <a href="http://gna.org/">Gna!</a></div>
- <div class="clear"></div>
-</div>
+<!-- SSI footer -->
+<!--#include virtual="footer.html" -->
 
 </body>
 </html>
